update(color): stretched input over container to fix mobile functionality

--- a/style/module.css
+++ b/style/module.css
@@ -473,6 +473,7 @@ input[type="file"]::file-selector-button {
   flex-direction: row;
   align-items: center;
   gap: 16px;
+  position: relative;
 }
 
 .color-input:hover {
@@ -508,6 +509,16 @@ input[type="file"]::file-selector-button {
   color: var(--secondary-color);
 }
 
+.color-input input[type="color"] {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  opacity: 0;
+  cursor: pointer;
+}
+
 /* Styles for range inputs (I hate range inputs so much) */
 
 .range-container {
@@ -522,7 +533,7 @@ input[type="file"]::file-selector-button {
 }
 
 .range-input {
-  position: relative; /* Ensure the container is positioned relative */
+  position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -572,7 +583,7 @@ input[type="range"] {
   margin: 0;
   cursor: pointer;
   z-index: 2;
-  position: relative; /* Ensure the slider is above the color span */
+  position: relative;
 }
 
 input[type="range"]::-webkit-slider-thumb {
